V 1.3.1
  * fix mp3 convert
  * bug fixes

V 1.3
  * add omgtorrent engine
  * fix double events in plugins

V 1.2
  * add download torrents
  * bug fix

V 1.1
  * add Piratebay engine
  * fix many bugs

V 0.5.0
  * Add local file browsing and sharing support
  * Add vimeo engine
  * New plugin system
  * fix vevo videos for youtube
  * others small fixes

V 0.1.1
  * add suggested videos for dailymotion
  * add local playlist system with web storage
  * bug fixes