@@ -1,5 +1,6 @@
 V 1.3.1
   * fix mp3 convert
+  * fix fullscreen return
   * bug fixes
 
 V 1.3
